--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -51,7 +52,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.5.4"
   }
 }
