--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.12.0",
+    "moment": "^2.29.1",
     "path-to-regexp": "^1.7.0",
     "react": "^17.0.2",
     "react-dnd": "^14.0.4",
