--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-burger",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://kupum.github.io/react-burger/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
@@ -31,6 +32,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "cypress:open": "./node_modules/.bin/cypress open",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,8 +57,16 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.11",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
+    "cypress": "^9.5.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint-plugin-cypress": "^2.12.1",
+    "gh-pages": "^3.2.3",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.5.4"
   }
 }
